Bug 51619 - [CRASH] legacy reports: asks for parameters, then for empty parameters list then CRASH
Summary: [CRASH] legacy reports: asks for parameters, then for empty parameters list t...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
3.5.5.2 rc
Hardware: x86-64 (AMD64) Linux (All)
: medium blocker
Assignee: Lionel Elie Mamane
URL:
Whiteboard: target:3.7.0 target:3.6.0.0.beta3 tar...
Keywords: regression
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2012-07-01 08:18 UTC by Renato S. Yamane
Modified: 2012-07-03 05:51 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
File to reproduce this bug report (43.51 KB, application/vnd.oasis.opendocument.database)
2012-07-01 08:18 UTC, Renato S. Yamane
Details
trace after crash (117.01 KB, text/x-log)
2012-07-01 13:19 UTC, Alex Thurgood
Details
screenshot of "asking for parameters" dialog (3.85 KB, image/png)
2012-07-02 05:50 UTC, Lionel Elie Mamane
Details
Yamane trace after crash (156.95 KB, text/x-log)
2012-07-02 06:02 UTC, Renato S. Yamane
Details
apple crash report trace (73.44 KB, text/plain)
2012-07-02 06:19 UTC, Alex Thurgood
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Renato S. Yamane 2012-07-01 08:18:53 UTC
Created attachment 63667 [details]
File to reproduce this bug report

Problem description: 

Query is working fine:
SELECT * FROM "Clients" WHERE "Cidade" = ?

BUT, when I click on a REPORT to do this QUERY, the BASE ask me TWICE on input field and LibreOffice CRASH.

Steps to reproduce:
1. Open the document attached
2. Try use the QUERY (e.g. when input field ask you about a city name, type "New York")
3. Now, try open the REPORT... Base will ask you about a city name TWICE and will CRASH!

Maybe is something similar to this old bug report:
https://issues.apache.org/ooo/show_bug.cgi?id=106526

Platform (if different from the browser): 
Linux Kubuntu 12.04
Comment 1 Alex Thurgood 2012-07-01 12:05:40 UTC
Can not reproduce on LO 3.4.4 64bit Linux Mint, but will try on a more recent version.


Alex
Comment 2 Alex Thurgood 2012-07-01 12:23:23 UTC
Can not reproduce either in :

LibreOffice 3.5.4.2 
Build ID: 165a79a-7059095-e13bb37-fef39a4-9503d18


Linux Mint 12, 64bit

Alex
Comment 3 Alex Thurgood 2012-07-01 13:18:18 UTC
Confirming on 3.5.5.2 RC Linux Mint 13, 64bit


# Problematic frame:
# C  [libdbulo.so+0x26c5be]  std::vector<dbaui::OIndexField, std::allocator<dbaui::OIndexField> >::_M_fill_insert(__gnu_cxx::__normal_iterator<dbaui::OIndexField*, std::vector<dbaui::OIndexField, std::allocator<dbaui::OIndexField> > >, unsigned long, dbaui::OIndexField const&)+0xb9e


Attaching trace

Marking as regression, no crash in 3.5.4

Alex
Comment 4 Alex Thurgood 2012-07-01 13:19:47 UTC
Created attachment 63679 [details]
trace after crash
Comment 5 Alex Thurgood 2012-07-01 13:26:01 UTC
Assigning to you Lionel, if it isn't your thing, just reset the default.

Alex
Comment 6 Lionel Elie Mamane 2012-07-02 01:42:08 UTC
Reproduced with my development tree (libreoffice-3-5 branch).

First time, the parameter "Cidade" is asked.

But second time, the parameters list is empty. Renato and Alex, do you really get asked *twice* for the Cidade parameter, or is the parameter list empty for you also the second time?
Comment 7 Alex Thurgood 2012-07-02 05:29:56 UTC
Heh, on my Mac dev build :

version 3.6.0alpha0+  (Build ID: 4ccb4bd)

The crash does not happen...

will have to download a 3.5.5 RC2 to test on Mac.


Alex
Comment 8 Alex Thurgood 2012-07-02 05:30:51 UTC
(In reply to comment #6)

Hi Lionel,

> Reproduced with my development tree (libreoffice-3-5 branch).
> 
> First time, the parameter "Cidade" is asked.
> 
> But second time, the parameters list is empty. Renato and Alex, do you really
> get asked *twice* for the Cidade parameter, or is the parameter list empty for
> you also the second time?

Not in front of machine at the moment, but I seem to recall that it did ask for data entry a second time before crashing. Will have to check later.


Alex
Comment 9 Lionel Elie Mamane 2012-07-02 05:49:58 UTC
(In reply to comment #7)
> Heh, on my Mac dev build :

> version 3.6.0alpha0+  (Build ID: 4ccb4bd)

> The crash does not happen...

But you still get two "please enter parameters" dialogs? Only, it does not crash?

(In reply to comment #8)
> (In reply to comment #6)

>> Reproduced with my development tree (libreoffice-3-5 branch).

>> First time, the parameter "Cidade" is asked.

>> But second time, the parameters list is empty. Renato and Alex, do you really
>> get asked *twice* for the Cidade parameter, or is the parameter list empty for
>> you also the second time?

> Not in front of machine at the moment, but I seem to recall that it did ask for
> data entry a second time before crashing. Will have to check later.

Yes, but the point is that it asks for data entry, but the second time the list of parameters it asks data entry for is empty. In the screenshot, the area in red has "Cidade" the first time (like in screenshot), but is all empty the second time.
Comment 10 Lionel Elie Mamane 2012-07-02 05:50:37 UTC
Created attachment 63700 [details]
screenshot of "asking for parameters" dialog
Comment 11 Renato S. Yamane 2012-07-02 06:02:04 UTC
Created attachment 63702 [details]
Yamane trace after crash

(In reply to comment #6)
> First time, the parameter "Cidade" is asked.
> 
> But second time, the parameters list is empty. Renato and Alex, do you really
> get asked *twice* for the Cidade parameter, or is the parameter list empty for
> you also the second time?

First time the parameter is asking about "Cidade" parameter, and the second time is EMPTY.
Comment 12 Alex Thurgood 2012-07-02 06:19:15 UTC
(In reply to comment #11)

> > But second time, the parameters list is empty. Renato and Alex, do you really
> > get asked *twice* for the Cidade parameter, or is the parameter list empty for
> > you also the second time?
> 
> First time the parameter is asking about "Cidade" parameter, and the second
> time is EMPTY.



Yes, confirming also on Mac OSX with LO 3.5.5 RC2. The second dialogue shows an empty parameter list.

Alex
Comment 13 Alex Thurgood 2012-07-02 06:19:55 UTC
Created attachment 63703 [details]
apple crash report trace
Comment 14 Not Assigned 2012-07-02 06:20:31 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c34ef6b710bd9f3a5beac3be856c970c70e68610

fdo#51619 do not ask for parameters if all have already been given
Comment 15 Not Assigned 2012-07-02 06:20:59 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=961564738d846973344d976f21a61c40ba549fc0&g=libreoffice-3-6

fdo#51619 do not ask for parameters if all have already been given


It will be available in LibreOffice 3.6.
Comment 16 Lionel Elie Mamane 2012-07-02 06:26:28 UTC
(In reply to comment #12)
> (In reply to comment #11)

>>> But second time, the parameters list is empty. Renato and Alex, do you really
>>> get asked *twice* for the Cidade parameter, or is the parameter list empty for
>>> you also the second time?

>> First time the parameter is asking about "Cidade" parameter, and the second
>> time is EMPTY.

> Yes, confirming also on Mac OSX with LO 3.5.5 RC2. The second dialogue shows an
> empty parameter list.

Great! This means I have reproduced the same problem as this bug, and that my fix is complete. Asking for review to apply to libreoffice-3-5
Comment 17 Renato S. Yamane 2012-07-02 06:28:13 UTC
(In reply to comment #15)
> fdo#51619 do not ask for parameters if all have already been given
> 
> It will be available in LibreOffice 3.6.

Is there a way to push to 3.5.5?
Is not good a CRASH in a stable release :-(
Comment 18 Alex Thurgood 2012-07-02 06:31:00 UTC
(In reply to comment #16)

> Great! This means I have reproduced the same problem as this bug, and that my
> fix is complete. Asking for review to apply to libreoffice-3-5


Excellent, well done ! Here's hoping it gets the green light for backporting too :-)

Alex
Comment 19 Lionel Elie Mamane 2012-07-02 06:44:53 UTC
(In reply to comment #17)
> Is there a way to push to 3.5.5?
> Is not good a CRASH in a stable release :-(

Adding a fix to stable release branch (3.5.x) needs review by other developers. I asked for such review, it can take a few days to happen. I'm pretty sure the fix will be in 3.5.6 (to be released in September). For 3.5.5, it is *very* late, and it would mean delaying the release of 3.5.5 and I'm not sure we will do that.

I'm putting this bug as "blocker" to put it on the release people's agenda, so that it gets *considered*, but the decision might be to delay the fix for 3.5.6.

See http://wiki.documentfoundation.org/Release_Criteria#Blocker_Bug_Definition for a definition of what's allowed to block a release. All criteria are clearly met, except maybe:

 * problem must affect most users or there must not be a reasonable workaround; it is bad to block the release and all users because of a corner case when a reasonable workaround exists

Does it affect "most users"? The question is whether most users use Base at all and queries with parameters in particular. <shrug>

Alternatively, the "there must not be a reasonable workaround". The only work-around I can think if is not using parameters in queries for reports, but to change the underlying query every time. E.g. instead of:
 SELECT * FROM "Clients" WHERE "Cidade" = ?
use
 SELECT * FROM "Clients" WHERE "Cidade" = 'London'

And change 'London' to anything else you want when you want something else than London. That's rather onerous, but it works.
Comment 20 Not Assigned 2012-07-02 06:55:02 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=578128bea222938a38a1fa979264464e5e9ba4b0&g=libreoffice-3-5

fdo#51619 do not ask for parameters if all have already been given


It will be available in LibreOffice 3.5.6.
Comment 21 Renato S. Yamane 2012-07-02 10:19:31 UTC
Testing on 3.5.3 and 3.5.4 (on *WINDOWS*), when I click on REPORT, the input field don't appear and the report is empty.
Comment 22 Lionel Elie Mamane 2012-07-02 10:26:51 UTC
(In reply to comment #21)
> Testing on 3.5.3 and 3.5.4 (on *WINDOWS*), when I click on REPORT, the input
> field don't appear and the report is empty.

Please, in the comments of ONE bug don't discuss other bugs. What you describe seems to be bug 47473. If not, please file a *new* bug and put me on CC of that new bug.
Comment 23 Not Assigned 2012-07-03 00:55:33 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-3-5-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0a3744b78b52c403630eff81c756ba1543e9c84b&g=libreoffice-3-5-5

fdo#51619 do not ask for parameters if all have already been given


It will be available already in LibreOffice 3.5.5.
Comment 24 Renato S. Yamane 2012-07-03 05:51:36 UTC
(In reply to comment #23)
> It will be available already in LibreOffice 3.5.5.

Amazing!
Thanks for your great job!