fdo#51619 do not ask for parameters if all have already been given

Change-Id: I1c1b1e46e7269bbfa24fbc0c0ebf5ba0f5aad7b9
(cherry picked from commit c34ef6b710bd9f3a5beac3be856c970c70e68610)

Signed-off-by: Michael Stahl <mstahl@redhat.com>
Signed-off-by: Fridrich Strba <fridrich.strba@graduateinstitute.ch>
Signed-off-by: Miklos Vajna <vmiklos@suse.cz>